--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 Mako==1.1.4
 MarkupSafe==1.1.1
+mysqlclient==2.0.3
 phe==1.4.0
 python-dateutil==2.8.1
 python-editor==1.0.4
